Adicionando suporte ao Swagger/OpenAPI e ajustando configurações de segurança e inventor opcional